Added python debugging and direnv
Using debugpy for nvim-dap debugging. direnv is so nvim is launched
within the shell so nvim-dap sees nix-ld environment variables

--- a/PyQt5/pyproject.toml
+++ b/PyQt5/pyproject.toml
@@ -3,5 +3,6 @@ name = "pyqt5-project"
 version = "0.1.0"
 requires-python = ">=3.13"
 dependencies = [
+    "debugpy>=1.8.17",
     "pyqt5>=5.15.11",
 ]
